crates/context-macro/tests/constraints/init_seeds_keys.fail.stderr
error: Cannot specified keys and seeds at the same time.
  --> tests/constraints/init_seeds_keys.fail.rs:30:9
   |
30 |     pub counter: Mut<Account<Counter>>,
   |         ^^^^^^^
